possible to input cost in different formats